cf_analysis_results/checkerframework_3.42.0_results/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8.txt
../dataset/june2020_dataset/url5681492665_ArgParser_Java_ArgParser_tgz-pJ8-org_argparser_ArgParserTestJ8/src/org/argparser/ArgParser.java:2206: error: (required.method.not.called) $$ 4 $$ method close $$ new FileReader(file) $$ java.io.FileReader $$ possible exceptional exit due to prependArgs(new FileReader(file), args) with exception type java.io.IOException $$ ( 63282, 63302 ) $$ @MustCall method close may not have been invoked on new FileReader(file) or any of its aliases.
      return prependArgs(new FileReader(file), args);
                         ^
  The type of object is: java.io.FileReader.
  Reason for going out of scope: possible exceptional exit due to prependArgs(new FileReader(file), args) with exception type java.io.IOException
1 error
